--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -530,6 +530,9 @@
   .relative {
     position: relative;
   }
+  .static {
+    position: static;
+  }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
