--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
     monospace;
     --color-amber-400: oklch(82.8% 0.189 84.429);
+    --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-yellow-300: oklch(90.5% 0.182 98.111);
     --color-cyan-400: oklch(78.9% 0.154 211.53);
@@ -929,8 +930,8 @@
       color: color-mix(in oklab, var(--color-amber-400) 60%, transparent);
     }
   }
-  .text-amber-600 {
-    color: var(--color-amber-600);
+  .text-amber-500 {
+    color: var(--color-amber-500);
   }
   .text-cyan-400 {
     color: var(--color-cyan-400);
